# project-echo

./: .gitignore  CLAUDE.md  LICENSE  README.md  echo_memory.db-shm  pyproject.toml  start.ps1  start1.ps1  test.md  项目设想.txt
config/: anchors.yaml  birth_inscription.txt  modules.yaml  principles.yaml
src/echo/: __init__.py  bus.py  cli.py  config.py  server.py  zim_ingest.py  zim_reader.py
src/echo/agent/: __init__.py  core.py
src/echo/body/: __init__.py  action.py  vitals.py  world.py
src/echo/consciousness/: __init__.py  anchors.py  crystallize.py  modulator.py  stream.py
src/echo/llm/: __init__.py  backend.py
src/echo/llm/adapters/: __init__.py  anthropic.py  ollama.py  openai.py
src/echo/memory/: __init__.py  anomaly.py  models.py  priority.py  store.py  summarizer.py
src/echo/personality/: __init__.py  traits.py
src/echo/planning/: __init__.py  planner.py
src/echo/review/: __init__.py  critique.py  dimensions.py
src/echo/social/: __init__.py  relationship.py
src/echo/tools/: __init__.py  builtin.py  registry.py
tests/: test_agent.py  test_bus.py  test_consciousness.py  test_memory.py  test_modulator.py  test_planning.py  test_review.py
